# archbrain

./: .gitignore  CLAUDE.md  LICENSE  README.md  converter.md  fluxo.txt  next.config.ts  package-lock.json  package.json  repo-map.yaml  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml
docs/: analise-ddd.md  refinamento-frontend.md  refinamento-tecnico.md  representacao-ddd.md
okf-reference/: pyproject.toml
okf-reference/samples/crypto_bitcoin/: README.md
okf-reference/samples/ga4_merch_store/: README.md
okf-reference/samples/stackoverflow/: README.md
okf-reference/src/reference_agent/: __main__.py  agent.py  cli.py  runner.py
okf-reference/src/reference_agent/bundle/: __init__.py  index.py
okf-reference/src/reference_agent/prompts/: reference_instruction.md  web_ingestion_instruction.md
okf-reference/src/reference_agent/sources/: __init__.py  bigquery.py
okf-reference/src/reference_agent/tools/: bundle_tools.py  context.py  source_tools.py  web_tools.py
okf-reference/src/reference_agent/viewer/: __init__.py  generator.py
okf-reference/tests/: test_bigquery_source.py  test_bundle_tools.py  test_document.py  test_index.py  test_viewer.py  test_web_fetcher.py  test_web_tools.py
scripts/: validate-model.ts
scripts/okf-scan/: check-repo-freshness.test.ts  check-repo-freshness.ts  concurrency.test.ts  concurrency.ts  e2e.test.ts  hash.test.ts  hash.ts  index.test.ts  index.ts  manifest.test.ts  manifest.ts  repo-map.test.ts  repo-map.ts  scan-repos.test.ts  scan-repos.ts  types.ts
src/app/: globals.css  layout.tsx  page.tsx
(+487 files in other folders)
